src/objects/Resource__c.object
<CustomObject>
    <description>This object collects the information  that is needed for linking Engineer information to Work Orders for reporting purposes.</description>
    <fields>
        <fullName>ActiveUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that a user is active or not.</description>
        <label>Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CATSProfile4digCode__c</fullName>
        <label>CATS Profile</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click__c</fullName>
        <description>This field indicates if the resource is applicable as a Click country.</description>
        <formula>IF(OR(CompanyCode__c = &quot;0202&quot;, CompanyCode__c = &quot;0067&quot;, CompanyCode__c = &quot;6864&quot;, CompanyCode__c = &quot;6712&quot;, CompanyCode__c = &quot;0079&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>This formula field get the Country Code on basis of Company Code.</description>
        <formula>IF(CompanyCode__c = &quot;0202&quot; , &quot;BE&quot;, 
  IF(CompanyCode__c = &quot;0067&quot; , &quot;DK&quot;,  
     IF(CompanyCode__c = &quot;6706&quot; , &quot;FR&quot;,  
        IF(CompanyCode__c = &quot;6864&quot; , &quot;NO&quot;,  
           IF(CompanyCode__c = &quot;0160&quot; , &quot;SE&quot;,  
              IF(CompanyCode__c = &quot;0154&quot; , &quot;ES&quot;, 
                 IF(CompanyCode__c = &quot;6709&quot; , &quot;IE&quot;,  
                    IF(CompanyCode__c = &quot;6712&quot; , &quot;DE&quot;, 
                       IF(CompanyCode__c = &quot;6750&quot; , &quot;UK&quot;,  
                          IF(CompanyCode__c = &quot;0079&quot; , &quot;NL&quot;, &quot;None&quot; 
)  )  )  )  )  )  )  )  )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Edit_OPG_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to indicate that Resource has JDE - 3rd Party Enable Operating Schedule permission set</description>
        <label>Create/Edit OPG Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <description>Work Order Billing</description>
        <formula>&quot;SAP_10&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>&quot;SAP_20&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>241</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeFirstName__c</fullName>
        <label>Employee First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeLastName__c</fullName>
        <label>Employee Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeMiddleName__c</fullName>
        <label>Employee Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeStatus__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enable_SSO__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable SSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastCarStockCheck__c</fullName>
        <description>This indicates the last car stock check executes for this resource.</description>
        <label>Last Car Stock Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCentralWarehouseCheck__c</fullName>
        <description>This indicates the last central warehouse check executes for the resource.</description>
        <label>Last Central Warehouse Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastMethodologyCheck__c</fullName>
        <description>This indicates the last time a methodology check was conducted for this resource.</description>
        <label>Last Methodology Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastTechnicalServiceCheck__c</fullName>
        <description>This indicates the last time the resource received a technical service check.</description>
        <label>Last Technical Service Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastWalkAlongReport__c</fullName>
        <description>This field indicates the last walk along report conducted for this resource.</description>
        <label>Last Walk Along Report</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NamePrefix__c</fullName>
        <label>Name Prefix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <description>This field is used to specify the nickname of the user.</description>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonnelArea__c</fullName>
        <label>Personnel Area</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position_Code__c</fullName>
        <description>CR 1748</description>
        <label>Position Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Description__c</fullName>
        <description>CR 1748</description>
        <label>Position Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RLS_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RLS Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a relationship to the contact required for a third party user (customer community user) being created in the system.</description>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequiresClickUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the user needs to have a click user.</description>
        <label>Requires Click User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAPPlant__c</fullName>
        <description>FD 1374 - Manually entered in SF</description>
        <inlineHelpText>Manually maintained in SF</inlineHelpText>
        <label>SAP Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPStorageLocation__c</fullName>
        <label>SAP Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrg__c</fullName>
        <formula>CASE(CompanyCode__c, 
&quot;0202&quot;, &quot;SAP_0333&quot;, 
&quot;0067&quot;, &quot;SAP_0975&quot;, 
&quot;6706&quot;, &quot;SAP_6706&quot;, 
&quot;6864&quot;, &quot;SAP_6864&quot;, 
&quot;0160&quot;, &quot;SAP_0976&quot;, 
&quot;0154&quot;, &quot;SAP_0080&quot;, 
&quot;6709&quot;, &quot;SAP_6709&quot;, 
&quot;6712&quot;, &quot;SAP_6712&quot;, 
&quot;6750&quot;, &quot;SAP_6750&quot;, 
&quot;0079&quot;, &quot;SAP_0111&quot;, &quot;None&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesOrg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skill(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamNumber__c</fullName>
        <description>CR- 1609 Adding Team and Team Number to Interface 1374-1609-447</description>
        <label>Team Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>CR- 1609 Adding Team and Team Code to Interface 1374-1609-447</description>
        <label>Team</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that the resource is a third party planner resource which also requires a click license in case of a click country.</description>
        <label>Third Party Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserProfile__c</fullName>
        <description>This field indicates the user profile required.</description>
        <label>User Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Third Party Capacity</fullName>
                </value>
                <value>
                    <fullName>Planner</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>BI Analyst</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>TS Resource</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>Routesales Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All_Resources</fullName>
        <columns>NAME</columns>
        <columns>EmployeeFirstName__c</columns>
        <columns>EmployeeLastName__c</columns>
        <columns>EmailAddress__c</columns>
        <columns>SAPStorageLocation__c</columns>
        <columns>SAPPlant__c</columns>
        <columns>CostCenter__c</columns>
        <columns>CompanyCode__c</columns>
        <columns>CATSProfile4digCode__c</columns>
        <columns>Team__c</columns>
        <columns>TeamNumber__c</columns>
        <columns>RelatedUser__c</columns>
        <columns>UserProfile__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Resources</label>
    </listViews>
    <nameField>
        <label>SAP Employee Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TS_ContactWithoutAccount</fullName>
        <active>true</active>
        <description>You cannot create a portal user with a contact not related to an account.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp;
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp;
OR(ISPICKVAL(UserProfile__c, &quot;Third Party Capacity&quot;), ISPICKVAL(UserProfile__c, &quot;TS Resource&quot;)) &amp;&amp;
NOT(ISBLANK(RelatedContact__c)) &amp;&amp;
ISBLANK( RelatedContact__r.AccountId )</errorConditionFormula>
        <errorMessage>You cannot create a portal user with a contact not related to an account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_ExistingPortalUser</fullName>
        <active>false</active>
        <description>You cannot create another user for this resource.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp;
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp;
NOT(ISBLANK( RelatedUser__c ))</errorConditionFormula>
        <errorMessage>You cannot create another user for this resource.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_MissingEmailAddress</fullName>
        <active>true</active>
        <description>You cannot create a user without an email address.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp;
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp;
ISBLANK(EmailAddress__c )</errorConditionFormula>
        <errorMessage>You cannot create a user without an email address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_OwnerOfAccountWithoutRole</fullName>
        <active>true</active>
        <description>The owner of account related to the related contact has an owner without a role.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp;
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp;
OR(ISPICKVAL(UserProfile__c, &quot;Third Party Capacity&quot;), ISPICKVAL(UserProfile__c, &quot;TS Resource&quot;)) &amp;&amp;
NOT(ISBLANK(RelatedContact__c)) &amp;&amp;
NOT(ISBLANK( RelatedContact__r.AccountId)) &amp;&amp;
ISBLANK( RelatedContact__r.Account.Owner.UserRoleId )</errorConditionFormula>
        <errorMessage>The owner of account related to the related contact has an owner without a role.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_PreventClickRolesForTemplate2</fullName>
        <active>true</active>
        <description>You cannot create a user with Click roles for a non Click resource.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp;
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp;
Click__c = FALSE &amp;&amp;
OR(
ISPICKVAL( UserProfile__c, &quot;Planner&quot;),
ISPICKVAL( UserProfile__c, &quot;Supervisor&quot;),
ISPICKVAL( UserProfile__c, &quot;BI Analyst&quot;),
ISPICKVAL( UserProfile__c, &quot;Admin&quot;),
ISPICKVAL( UserProfile__c, &quot;Operator&quot;),
ISPICKVAL( UserProfile__c, &quot;Routesales Resource&quot;))</errorConditionFormula>
        <errorMessage>You cannot create a user with Click roles for a non Click resource.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_RequestClickUserForTemplate2</fullName>
        <active>true</active>
        <description>You cannot request a Click user for a template 2 resource.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp;
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp;
Click__c = FALSE &amp;&amp;
RequiresClickUser__c = TRUE</errorConditionFormula>
        <errorMessage>You cannot request a Click user for a template 2 resource.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_RequestClickUserForTemplate3</fullName>
        <active>true</active>
        <description>You cannot assign a Click profile without requesting a Click user.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp;
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp;
RequiresClickUser__c = FALSE &amp;&amp;
OR( 
ISPICKVAL( UserProfile__c, &quot;Planner&quot;), 
ISPICKVAL( UserProfile__c, &quot;Supervisor&quot;), 
ISPICKVAL( UserProfile__c, &quot;BI Analyst&quot;), 
ISPICKVAL( UserProfile__c, &quot;Admin&quot;), 
ISPICKVAL( UserProfile__c, &quot;Operator&quot;), 
ISPICKVAL( UserProfile__c, &quot;Routesales Resource	&quot;))</errorConditionFormula>
        <errorMessage>You cannot assign a Click profile without requesting a Click user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_RequiresUsernameAndNickname</fullName>
        <active>true</active>
        <description>You need to enter a username and nickname if you want to create a portal user while username is required if you want to create a click user.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp; 
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp; 
OR(
(ISBLANK( NickName__c ) &amp;&amp; ISPICKVAL(UserProfile__c, &quot;TS Resource&quot;) &amp;&amp; RequiresClickUser__c = false ),
(ISBLANK( NickName__c ) &amp;&amp; ISPICKVAL(UserProfile__c, &quot;Third Party Capacity&quot;)),
ISBLANK( Username__c ))</errorConditionFormula>
        <errorMessage>You need to enter a username and nickname if you want to create a portal user, while username is required if you want to create a click user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_UserNameFormat</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(Username__c) &amp;&amp; !REGEX ( UPPER (  Username__c  ) ,&quot;^[A-Z0-9._%+-/!#$%&amp;&apos;*=?^_`{|}~]+@[A-Z0-9.-]+\\.[A-Z]{2,4}$&quot;)</errorConditionFormula>
        <errorMessage>The username must be in the form of an email address (i.e. xxxx@xxx.com), but does not have to be a valid email address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_UserWithoutContact</fullName>
        <active>true</active>
        <description>You cannot create a portal user without a related contact.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.ResourceValidationRules__c &amp;&amp;
ISCHANGED(ActiveUser__c) &amp;&amp; 
ActiveUser__c = TRUE &amp;&amp;
OR(ISPICKVAL(UserProfile__c, &quot;Third Party Capacity&quot;), (ISPICKVAL(UserProfile__c, &quot;TS Resource&quot;) &amp;&amp;  RequiresClickUser__c =false)) &amp;&amp;
ISBLANK(RelatedContact__c)</errorConditionFormula>
        <errorMessage>You cannot create a portal user without a related contact.</errorMessage>
    </validationRules>
</CustomObject>